# budget-app-service

./: .gitignore  README.md  pyproject.toml  requirements.txt
db/: account_db.py  item_db.py  mongo.py
main/db/: account_db.py  item_db.py  mongo.py
main/src/: budget_app.py
main/src/helpers/: plaid.py  request_bodies.py  sessions.py
main/src/routers/: account.py
main/src/service/: budget_app.py  plaid.py
main/src/service/helpers/: dependencies.py  encryption.py  request_bodies.py  sessions.py
main/src/service/routers/: account.py
src/: app.py  budget_app.py
src/db/: account_db.py  item_db.py  mongo.py
src/helpers/: dependencies.py  logger.py  plaid.py  request_context_middleware.py  sessions.py
src/helpers/plaid/: client.py  investments.py  items.py  liabilities.py  transactions.py
src/requests/: bodies.py  payloads.py  plaid_payloads.py
src/routers/: account.py  linked_plaid.py
test/db/: test_account_db.py  test_item_db.py
test/helpers/: test_encryption.py  test_plaid.py  test_sessions.py
test/helpers/plaid/: test_client.py  test_investments.py  test_items.py  test_liabilities.py  test_transactions.py
test/mocks/: dbs.py  plaid.py  session_manager.py
test/service/: test_app.py
test/service/routers/: test_account.py  test_linked_plaid.py
